move logo icons from gui/resources package to resources
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@2671 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/build.xml
+++ b/build.xml
@@ -1311,6 +1311,8 @@ javax.swing.event, javax.swing.border"/>
                 prefix="net/java/sip/communicator/service/gui"/>
             <zipfileset dir="${dest}/net/java/sip/communicator/impl/gui"
                 prefix="net/java/sip/communicator/impl/gui"/>
+        	<zipfileset dir="resources/images"
+        	                prefix="resources/images"/>
         </jar>
     </target>
 
