Growl notifications now display the cool SIP Communicator icon instead of the ugly MacOSX system default icon.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@2672 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/build.xml
+++ b/build.xml
@@ -422,7 +422,7 @@
                   shortname="SIP Communicator"
                   signature="sipc"
                   mainclass="org.apache.felix.main.Main"
-                  icon="src/net/java/sip/communicator/impl/gui/resources/common/logo/sc_logo_128x128.icns"
+                  icon="resources/images/logo/sc_logo_128x128.icns"
                   jvmversion="1.4+"
                   version="${sip-communicator.version}"
                   build="draft"
@@ -453,6 +453,7 @@
             <include name="lib/native/mac/*.jnilib" />
             <include name="${bundles.dest}/*.jar" />
             <exclude name="${bundles.dest}/*-slick.jar" />
+            <include name="resources/images/logo/sc_logo_128x128.icns" />
         </jarfileset>
         <javafilelist dir="${macosx.resrc.dir}"
                       files="logging.properties"/>
