path to ant.jar in the eclipse home directory
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@2721 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/ide/eclipse/.classpath
+++ b/ide/eclipse/.classpath
@@ -46,5 +46,6 @@
 	<classpathentry kind="lib" path="lib/os-specific/windows/installer-exclude/jmf.jar"/>
 	<classpathentry kind="lib" path="lib/os-specific/windows/installer-exclude/sound.jar"/>
 	<classpathentry kind="lib" path="lib/os-specific/windows/jdic_stub.jar"/>
+	<classpathentry kind="var" path="ECLIPSE_HOME/plugins/org.apache.ant_1.6.5/lib/ant.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
