Added log4j as a separate bundle
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@2738 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/lib/felix.unit.test.properties
+++ b/lib/felix.unit.test.properties
@@ -44,7 +44,9 @@ felix.auto.start.1= file:lib/bundle/org.apache.felix.servicebinder-0.8.0-SNAPSHO
 #
 
 felix.auto.start.2= \
- file:sc-bundles/util.jar
+ reference:file:sc-bundles/util.jar \
+ reference:file:lib/bundle/log4j.jar
+
 
 felix.auto.start.3= \
  file:sc-bundles/configuration.jar \
