set default log levels for jmdns and joustsim to info
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@2743 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/lib/logging.properties
+++ b/lib/logging.properties
@@ -55,7 +55,7 @@ java.util.logging.ConsoleHandler.formatter = net.java.sip.communicator.util.ScLo
 ############################################################
 
 # We don't want trace logs from joscar and joustsim
-net.kano.level = FINEST
+net.kano.level = INFO
 
 ymsg.network.level = FINEST
 
@@ -75,6 +75,7 @@ net.java.sip.communicator.service.configuration.level = FINEST
 net.java.sip.communicator.impl.configuration.level = FINEST
 net.java.sip.communicator.impl.history.level = INFO
 net.java.sip.communicator.impl.gui.level = INFO
+net.java.sip.communicator.impl.protocol.zeroconf.jmdns.level=INFO
 
 # For example, set the com.xyz.foo logger to only log SEVERE
 # messages:
