started applying bonjour patch from chris
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@2751 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/plugin/zeroconfaccregwizz/resources.properties
+++ b/src/net/java/sip/communicator/plugin/zeroconfaccregwizz/resources.properties
@@ -5,7 +5,6 @@ firstname=Firname:
 password=Password:
 rememberPassword=Remember password
 userAndPassword=Identification
-existingAccount=* The account you entered is already installed.
-
+existingAccount=* A Bonjour account already exists. You can only install a single Bonjour account.
 protocolIcon=resources/images/zeroconf/zeroconf-color-16.png
 pageImage=resources/images/zeroconf/zeroconf-color-64.png
