moved log4j to a separate bundle
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@2763 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/lib/felix.client.run.properties
+++ b/lib/felix.client.run.properties
@@ -46,7 +46,8 @@ felix.auto.start.10= reference:file:lib/bundle/org.apache.felix.servicebinder-0.
 # file:lib/bundle/tablelayout.jar
 
 felix.auto.start.20= \
- reference:file:sc-bundles/util.jar
+ reference:file:sc-bundles/util.jar \
+ reference:file:lib/bundle/log4j.jar
 
 
 felix.auto.start.40= \
