- add the SIMPLE settings in the gui - fix a bug which prevent a contact to appear offline if he has us in his contact list while disconnecting - better support of bogus servers which don't relay unsubscription messages
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@2802 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/plugin/sipaccregwizz/resources.properties
+++ b/src/net/java/sip/communicator/plugin/sipaccregwizz/resources.properties
@@ -14,6 +14,11 @@ preferredTransport=Preferred transport
 yes=Yes
 no=No
 existingAccount=* The account you entered is already installed.
+enablePresence=Enable presence (SIMPLE)
+forceP2PPresence=Force peer-to-peer presence mode
+offlineContactPollingPeriod=Offline contacts polling period (in s.)
+subscriptionExpiration=Default subscription duration (in s.)
+presenceOptions=Presence Options
 
 protocolIcon=resources/images/sip/sip16x16.png
 pageImage=resources/images/sip/sip64x64.png
