--- a/lib/felix.client.run.properties
+++ b/lib/felix.client.run.properties
@@ -78,7 +78,8 @@ felix.auto.start.60= \
  reference:file:sc-bundles/history.jar \
  reference:file:sc-bundles/msghistory.jar \
  reference:file:sc-bundles/callhistory.jar \
- reference:file:sc-bundles/audionotifier.jar
+ reference:file:sc-bundles/audionotifier.jar \
+ reference:file:sc-bundles/notification.jar
 
 
  felix.auto.start.66= \
