--- a/build.xml
+++ b/build.xml
@@ -304,10 +304,10 @@
         <javadoc author="true" destdir="${java.doc}" package="true"
             version="true" use="true" windowtitle="SIP Communicator API"
             classpathref="compile.class.path" source="1.4+">
-            <fileset dir="${src}">
-                <exclude name="net/java/sip/communicator/impl/version/**/*.java"/>
-                <include name="**/*.java"/>
-            </fileset>
+            <packageset dir="${src}">
+                <exclude name="net/java/sip/communicator/impl/version/**"/>
+                <include name="**"/>
+            </packageset>
             <tag name="todo" description="To do:"/>
         </javadoc>
     </target>
