ant location in the Eclipse .classpath file has been modified to match to the new version of Eclipse
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@2921 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/ide/eclipse/.classpath
+++ b/ide/eclipse/.classpath
@@ -1,52 +1,52 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" path="test"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="lib/felix.jar"/>
-	<classpathentry kind="lib" path="lib/jdic-all.jar"/>
-	<classpathentry kind="lib" path="lib/kxml-min.jar"/>
-	<classpathentry kind="lib" path="lib/servicebinder.jar"/>
-	<classpathentry kind="lib" path="lib/bundle/junit.jar"/>
-	<classpathentry kind="lib" path="lib/bundle/org.apache.felix.servicebinder-0.8.0-SNAPSHOT.jar"/>
-	<classpathentry kind="lib" path="lib/installer-exclude/backport-util-concurrent.jar"/>
-	<classpathentry kind="lib" path="lib/installer-exclude/bcprov-jdk14-130.jar"/>
-	<classpathentry kind="lib" path="lib/installer-exclude/commons-logging.jar"/>
-	<classpathentry kind="lib" path="lib/installer-exclude/concurrent.jar"/>
-	<classpathentry kind="lib" path="lib/installer-exclude/dnsjava-2.0.3.jar"/>
-	<classpathentry kind="lib" path="lib/installer-exclude/JainSipApi1.2.jar"/>
-	<classpathentry kind="lib" path="lib/installer-exclude/JainSipRi1.2.jar"/>
-	<classpathentry kind="lib" path="lib/installer-exclude/jcalendar-1.3.2.jar"/>
-	<classpathentry kind="lib" path="lib/installer-exclude/jdom.jar"/>
-	<classpathentry kind="lib" path="lib/installer-exclude/jmf.jar"/>
-	<classpathentry kind="lib" path="lib/installer-exclude/jml-1.0b1.jar"/>
-	<classpathentry kind="lib" path="lib/installer-exclude/joscar-client.jar"/>
-	<classpathentry kind="lib" path="lib/installer-exclude/joscar-common.jar"/>
-	<classpathentry kind="lib" path="lib/installer-exclude/joscar-protocol.jar"/>
-	<classpathentry kind="lib" path="lib/installer-exclude/jsocks-klea.jar"/>
-	<classpathentry kind="lib" path="lib/installer-exclude/jspeex.jar"/>
-	<classpathentry kind="lib" path="lib/installer-exclude/junit.jar"/>
-	<classpathentry kind="lib" path="lib/installer-exclude/log4j-1.2.8.jar"/>
-	<classpathentry kind="lib" path="lib/installer-exclude/nist-sdp-1.0.jar"/>
-	<classpathentry kind="lib" path="lib/installer-exclude/retroweaver-rt-2.0.jar"/>
-	<classpathentry kind="lib" path="lib/installer-exclude/rome-0.9.jar"/>
-	<classpathentry kind="lib" path="lib/installer-exclude/smack.jar"/>
-	<classpathentry kind="lib" path="lib/installer-exclude/smackx.jar"/>
-	<classpathentry kind="lib" path="lib/installer-exclude/smackx-jingle.jar"/>
-	<classpathentry kind="lib" path="lib/installer-exclude/Stun4J.jar"/>
-	<classpathentry kind="lib" path="lib/installer-exclude/ymsg_network_v0_61.jar"/>
-	<classpathentry kind="lib" path="lib/os-specific/linux/installer-exclude/jmf.jar"/>
-	<classpathentry kind="lib" path="lib/os-specific/linux/jdic_stub.jar"/>
-	<classpathentry kind="lib" path="lib/os-specific/mac/installer-exclude/jmf.jar"/>
-	<classpathentry kind="lib" path="lib/os-specific/mac/AppleJavaExtensions.jar"/>
-	<classpathentry kind="lib" path="lib/os-specific/mac/growl.jar"/>
-	<classpathentry kind="lib" path="lib/os-specific/mac/jdic_stub.jar"/>
-	<classpathentry kind="lib" path="lib/os-specific/solaris/installer-exclude/jmf.jar"/>
-	<classpathentry kind="lib" path="lib/os-specific/solaris/jdic_stub.jar"/>
-	<classpathentry kind="lib" path="lib/os-specific/windows/installer-exclude/jmf.jar"/>
-	<classpathentry kind="lib" path="lib/os-specific/windows/installer-exclude/sound.jar"/>
-	<classpathentry kind="lib" path="lib/os-specific/windows/jdic_stub.jar"/>
-	<classpathentry kind="var" path="ECLIPSE_HOME/plugins/org.apache.ant_1.6.5/lib/ant.jar"/>
-	<classpathentry kind="lib" path="lib/installer-exclude/aclibico-2.1.jar"/>
-	<classpathentry kind="output" path="bin"/>
+    <classpathentry kind="src" path="src"/>
+    <classpathentry kind="src" path="test"/>
+    <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+    <classpathentry kind="lib" path="lib/felix.jar"/>
+    <classpathentry kind="lib" path="lib/jdic-all.jar"/>
+    <classpathentry kind="lib" path="lib/kxml-min.jar"/>
+    <classpathentry kind="lib" path="lib/servicebinder.jar"/>
+    <classpathentry kind="lib" path="lib/bundle/junit.jar"/>
+    <classpathentry kind="lib" path="lib/bundle/org.apache.felix.servicebinder-0.8.0-SNAPSHOT.jar"/>
+    <classpathentry kind="lib" path="lib/installer-exclude/backport-util-concurrent.jar"/>
+    <classpathentry kind="lib" path="lib/installer-exclude/bcprov-jdk14-130.jar"/>
+    <classpathentry kind="lib" path="lib/installer-exclude/commons-logging.jar"/>
+    <classpathentry kind="lib" path="lib/installer-exclude/concurrent.jar"/>
+    <classpathentry kind="lib" path="lib/installer-exclude/dnsjava-2.0.3.jar"/>
+    <classpathentry kind="lib" path="lib/installer-exclude/JainSipApi1.2.jar"/>
+    <classpathentry kind="lib" path="lib/installer-exclude/JainSipRi1.2.jar"/>
+    <classpathentry kind="lib" path="lib/installer-exclude/jcalendar-1.3.2.jar"/>
+    <classpathentry kind="lib" path="lib/installer-exclude/jdom.jar"/>
+    <classpathentry kind="lib" path="lib/installer-exclude/jmf.jar"/>
+    <classpathentry kind="lib" path="lib/installer-exclude/jml-1.0b1.jar"/>
+    <classpathentry kind="lib" path="lib/installer-exclude/joscar-client.jar"/>
+    <classpathentry kind="lib" path="lib/installer-exclude/joscar-common.jar"/>
+    <classpathentry kind="lib" path="lib/installer-exclude/joscar-protocol.jar"/>
+    <classpathentry kind="lib" path="lib/installer-exclude/jsocks-klea.jar"/>
+    <classpathentry kind="lib" path="lib/installer-exclude/jspeex.jar"/>
+    <classpathentry kind="lib" path="lib/installer-exclude/junit.jar"/>
+    <classpathentry kind="lib" path="lib/installer-exclude/log4j-1.2.8.jar"/>
+    <classpathentry kind="lib" path="lib/installer-exclude/nist-sdp-1.0.jar"/>
+    <classpathentry kind="lib" path="lib/installer-exclude/retroweaver-rt-2.0.jar"/>
+    <classpathentry kind="lib" path="lib/installer-exclude/rome-0.9.jar"/>
+    <classpathentry kind="lib" path="lib/installer-exclude/smack.jar"/>
+    <classpathentry kind="lib" path="lib/installer-exclude/smackx.jar"/>
+    <classpathentry kind="lib" path="lib/installer-exclude/smackx-jingle.jar"/>
+    <classpathentry kind="lib" path="lib/installer-exclude/Stun4J.jar"/>
+    <classpathentry kind="lib" path="lib/installer-exclude/ymsg_network_v0_61.jar"/>
+    <classpathentry kind="lib" path="lib/os-specific/linux/installer-exclude/jmf.jar"/>
+    <classpathentry kind="lib" path="lib/os-specific/linux/jdic_stub.jar"/>
+    <classpathentry kind="lib" path="lib/os-specific/mac/installer-exclude/jmf.jar"/>
+    <classpathentry kind="lib" path="lib/os-specific/mac/AppleJavaExtensions.jar"/>
+    <classpathentry kind="lib" path="lib/os-specific/mac/growl.jar"/>
+    <classpathentry kind="lib" path="lib/os-specific/mac/jdic_stub.jar"/>
+    <classpathentry kind="lib" path="lib/os-specific/solaris/installer-exclude/jmf.jar"/>
+    <classpathentry kind="lib" path="lib/os-specific/solaris/jdic_stub.jar"/>
+    <classpathentry kind="lib" path="lib/os-specific/windows/installer-exclude/jmf.jar"/>
+    <classpathentry kind="lib" path="lib/os-specific/windows/installer-exclude/sound.jar"/>
+    <classpathentry kind="lib" path="lib/os-specific/windows/jdic_stub.jar"/>
+    <classpathentry kind="var" path="ECLIPSE_HOME/plugins/org.apache.ant_1.7.0.v200706080842/lib/ant.jar"/>
+    <classpathentry kind="lib" path="lib/installer-exclude/aclibico-2.1.jar"/>
+    <classpathentry kind="output" path="bin"/>
 </classpath>
