--- a/lib/felix.client.run.properties
+++ b/lib/felix.client.run.properties
@@ -72,6 +72,7 @@ felix.auto.start.50= \
  reference:file:sc-bundles/netaddr.jar \
  reference:file:sc-bundles/protocol-rss.jar \
  reference:file:sc-bundles/protocol-zeroconf.jar \
+ reference:file:sc-bundles/protocol-irc.jar \
  reference:file:sc-bundles/meta-cl.jar
 
 felix.auto.start.60= \
@@ -98,6 +99,7 @@ felix.auto.start.60= \
  reference:file:sc-bundles/extendedcallhistorysearch.jar \
  reference:file:sc-bundles/rssaccregwizz.jar \
  reference:file:sc-bundles/zeroconfaccregwizz.jar \
+ reference:file:sc-bundles/ircaccregwizz.jar \
  reference:file:sc-bundles/shutdown.jar
 
 # Uncomment the following lines if you want to run the architect viewer
