Enabled password field by default
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@2995 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/src/net/java/sip/communicator/plugin/ircaccregwizz/resources.properties
+++ b/src/net/java/sip/communicator/plugin/ircaccregwizz/resources.properties
@@ -6,7 +6,7 @@ infoPassword=Most IRC server didn't required password.
 rememberPassword=Remember password
 autoNickChange=Automatically change nick when it's already used
 defaultPort=Use default port
-passwordNotRequired=The server didn't required a password
+passwordNotRequired=My nickname doesn't require identification
 server=Hostname:
 port=Port:
 userAndPassword=Identification
