--- a/ide/eclipse/.classpath
+++ b/ide/eclipse/.classpath
@@ -48,5 +48,6 @@
     <classpathentry kind="lib" path="lib/os-specific/windows/jdic_stub.jar"/>
     <classpathentry kind="var" path="ECLIPSE_HOME/plugins/org.apache.ant_1.7.0.v200706080842/lib/ant.jar"/>
     <classpathentry kind="lib" path="lib/installer-exclude/aclibico-2.1.jar"/>
+    <classpathentry kind="lib" path="lib/installer-exclude/pircbot.jar"/>
     <classpathentry kind="output" path="bin"/>
 </classpath>
