--- a/lib/felix.unit.test.properties
+++ b/lib/felix.unit.test.properties
@@ -8,6 +8,7 @@ org.osgi.framework.system.packages= org.osgi.framework; \
  javax.swing.event; \
  javax.swing.table; \
  javax.swing.text; \
+ javax.imageio;\
  org.w3c.dom; \
  org.xml.sax; \
  org.xml.sax.helpers; \
@@ -61,6 +62,7 @@ felix.auto.start.4= \
  file:sc-bundles/history.jar \
  file:sc-bundles/protocol-icq.jar \
  file:sc-bundles/smacklib.jar \
+ file:sc-bundles/protocol-rss.jar \
  file:sc-bundles/protocol-jabber.jar \
  file:sc-bundles/protocol-msn.jar \
  file:sc-bundles/protocol-sip.jar \
@@ -86,6 +88,7 @@ felix.auto.start.5= \
  file:sc-bundles/protocol-msn-slick.jar \
  file:sc-bundles/protocol-yahoo-slick.jar \
  file:sc-bundles/protocol-gibberish-slick.jar \
+ file:sc-bundles/protocol-rss-slick.jar \
  file:sc-bundles/msghistory-slick.jar \
  file:sc-bundles/callhistory-slick.jar
 
