--- a/lib/testing.properties
+++ b/lib/testing.properties
@@ -14,7 +14,8 @@ net.java.sip.communicator.slick.runner.TEST_LIST=ConfigurationServiceLick \
  JabberProtocolProviderSlick \
  YahooProtocolProviderSlick \
  MsnProtocolProviderSlick \
- GibberishProtocolProviderServiceLick
+ GibberishProtocolProviderServiceLick \
+ RssProtocolProviderServiceLick
 
 # MediaServiceLick \
 
