--- a/ide/eclipse/.classpath
+++ b/ide/eclipse/.classpath
@@ -49,5 +49,6 @@
     <classpathentry kind="var" path="ECLIPSE_HOME/plugins/org.apache.ant_1.7.0.v200706080842/lib/ant.jar"/>
     <classpathentry kind="lib" path="lib/installer-exclude/aclibico-2.1.jar"/>
     <classpathentry kind="lib" path="lib/installer-exclude/pircbot.jar"/>
+    <classpathentry kind="lib" path="lib/installer-exclude/jsch-0.1.33.jar"/>
     <classpathentry kind="output" path="bin"/>
 </classpath>
