try to fix javadoc out of memory
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3117 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/build.xml
+++ b/build.xml
@@ -303,7 +303,7 @@
       description="Generates project javadoc.">
         <javadoc author="true" destdir="${java.doc}" package="true"
             version="true" use="true" windowtitle="SIP Communicator API"
-            classpathref="compile.class.path" source="1.4+">
+            classpathref="compile.class.path" source="1.4+" maxmemory="128m">
             <packageset dir="${src}">
                 <exclude name="net/java/sip/communicator/impl/version/**"/>
                 <include name="**"/>
