--- a/lib/felix.client.run.properties
+++ b/lib/felix.client.run.properties
@@ -1,7 +1,7 @@
 #
 # Framework config properties.
 #
-org.osgi.framework.system.packages= org.osgi.framework; \
+org.osgi.framework.system.packages= org.osgi.framework; ; version=1.3.0, \
  javax.swing; \
  javax.swing.event; \
  javax.swing.table; \
@@ -37,7 +37,8 @@ org.osgi.framework.system.packages= org.osgi.framework; \
  com.apple.eio; \
  org.xml.sax.helpers;
 
-felix.auto.start.10= reference:file:lib/bundle/org.apache.felix.servicebinder-0.8.0-SNAPSHOT.jar
+felix.auto.start.10= reference:file:lib/bundle/org.apache.felix.bundlerepository-1.0.0.jar \
+ reference:file:lib/bundle/org.apache.felix.servicebinder-0.9.0-SNAPSHOT.jar
 #reference:file:lib/bundle/org.apache.felix.bundlerepository-0.8.0-SNAPSHOT.jar
 #\
 # file:lib/bundle/shell.jar \
