rename windows installer
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3200 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/install/build.xml
+++ b/resources/install/build.xml
@@ -193,7 +193,7 @@
             <arg line="a -y data.7z *"/>
         </exec>
 
-        <concat destfile="${windows.app.dir}/setup-sip-communicator-${sip-communicator.version}.exe"
+        <concat destfile="${windows.app.dir}/sip-communicator-${sip-communicator.version}.exe"
                 binary="true">
             <fileset dir="${inst.resrc}/windows">
                 <include name="7zS.sfx"/>
